# optimized_virtual_orbitals

./: .gitignore  Course_level_bad.md  DIIS_pyscf.py  Figure.ppt  H_block_diag.csv  MP2_formular.md  OVOS_VQE.py  README.md  RHF_Hessian.py  ccsd_pyscf.py  cphf.py  deriviation.md  deriviation.md.backup  fix_eri.py  hessian_debug.txt  ovos.py  ovos_clean.py  ovos_copy.backup  ovos_old.py  ovos_profile_stats.txt  ovos_refactored.py  ovos_start_over.py  ovos_start_over.py.backup  ovos_tobias.py  pyproject.toml  requirements.txt  test_OVOS.py  test_urest_ups.py  water_energy.py
.github/: copilot-instructions.md
Thesis/: .latexmkrc  bibliography.bib  frontpage.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.tex  main.toc  preamble.tex
Thesis/appendices/: appendix_a.tex  appendix_b.tex  appendix_c.tex
Thesis/articles/: README.md
Thesis/chapters/: abstract.tex  acknowledgements.tex  acronyms.tex  background.tex  computational_details.tex  conclusion.tex  method.tex  (+4 more)
backup/: ovos.py  ovos_data.py  ovos_plot.py  ovos_plot_vqe.py  ovos_tobias_backup_20260106_133503.py  ovos_working.py
branch/: OVOS_extracted.md  Optimization_options.md  check_num_stability.py  hessian_matrix.txt  ovos_plot.py  ovos_profil.py  thoughts.md
local/: sync_ovos_from_main.sh
optimized_virtual_orbitals.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ovos/: __init__.py  ovos.py  ovos_vqe_uups.py
present/: academic.css  ovos_presentation.md  ovos_presentation.pptx  theme.css
test/: test_ovos_random.py  test_ovos_rhf.py  test_ovos_uhf.py
(+7279 files in other folders)
