[project]
name = "optimized-virtual-orbitals"
version = "0.1.0"
description = "OVOS algorithm for quantum computing"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0",
    "pyscf>=2.7.0,<2.11.0",
    "matplotlib>=3.5.0",
    "psutil>=7.2.1",
    "numba>=0.63.1",
    "tbb>=2022.3.1",
    "tqdm>=4.67.3",
    "sympy>=1.14.0",
]

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cpu"]
